--- a/packages/playground/src/app.html
+++ b/packages/playground/src/app.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MapQL Playground</title>
-    <meta name="description" content="Interactive playground for testing MapQL expressions" />
+    <title>JSON Transformer Playground</title>
+    <meta name="description" content="Interactive playground for testing JSON Transformer expressions" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🔧</text></svg>" />
     %sveltekit.head%
   </head>
